experiment: generate Q descriptors for lw5 code