@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -23,19 +21,25 @@
  * questions.
  */
 
-/*
+/**
  * @test
- * @bug 8222745
- * @ignore
- * @summary Test inline modifier
- * @compile -XDenablePrimitiveClasses InlineClassTest.java
- * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses InlineClassTest
+ * @bug 8209400 8215246
+ * @summary Allow anonymous classes to be value types
+ * @compile -XDemitQDesc AnonymousValueType.java
+ * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xverify:none AnonymousValueType
  */
 
-public primitive class InlineClassTest {
-    int x = 42;
-    public static void main(String [] args) {
-        if (new InlineClassTest().x != 42)
-            throw new AssertionError("Unexpected state");
+
+public class AnonymousValueType {
+    public static void main(String[] args) {
+        Object o = new value Comparable<String>() {
+            int x = 10;
+            @Override
+            public int compareTo(String o) {
+                return 0;
+            }
+        };
+        if (!o.toString().equals("AnonymousValueType$1@" + Integer.toHexString(o.hashCode())))
+            throw new AssertionError("Broken");
     }
 }
